--- a/ElectricalPowerSystems/ElectricalPowerSystems.csproj
+++ b/ElectricalPowerSystems/ElectricalPowerSystems.csproj
@@ -91,6 +91,10 @@
     <Compile Include="ParserTreeView.xaml.cs">
       <DependentUpon>ParserTreeView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Parser\ASTExcecutor.cs" />
+    <Compile Include="Parser\ASTVisitor.cs" />
+    <Compile Include="Parser\ObjectSystem.cs" />
+    <Compile Include="PowerModel.cs" />
     <Compile Include="Test\TestParser.cs" />
     <Compile Include="VisualGraphEditor.xaml.cs">
       <DependentUpon>VisualGraphEditor.xaml</DependentUpon>
@@ -169,6 +173,7 @@
   <ItemGroup>
     <Resource Include="Grammar.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
