--- a/ElectricalPowerSystems/ElectricalPowerSystems.csproj
+++ b/ElectricalPowerSystems/ElectricalPowerSystems.csproj
@@ -87,13 +87,9 @@
     <Compile Include="ModelGrammar.g4.parser.cs">
       <DependentUpon>ModelGrammar.g4</DependentUpon>
     </Compile>
-    <Compile Include="ParserTreeView.xaml.cs">
-      <DependentUpon>ParserTreeView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Parser\ASTExcecutor.cs" />
-    <Compile Include="Parser\ASTVisitor.cs" />
-    <Compile Include="Parser\ObjectSystem.cs" />
     <Compile Include="PowerModel.cs" />
+    <Compile Include="SimpleParser\ASTVisitor.cs" />
+    <Compile Include="SimpleParser\ObjectSystem.cs" />
     <Compile Include="Test\TestParser.cs" />
     <Compile Include="VisualGraphEditor.xaml.cs">
       <DependentUpon>VisualGraphEditor.xaml</DependentUpon>
@@ -110,10 +106,6 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="ParserTreeView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="VisualGraphEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -121,7 +113,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MathUtils.cs" />
-    <Compile Include="ModelCode.cs" />
     <Compile Include="ModelException.cs" />
     <Compile Include="ModelGraph.cs" />
     <Compile Include="ModelGraphAC.cs" />
