--- a/ElectricalPowerSystems/ElectricalPowerSystems.csproj
+++ b/ElectricalPowerSystems/ElectricalPowerSystems.csproj
@@ -87,10 +87,21 @@
     <Compile Include="ModelGrammar.g4.parser.cs">
       <DependentUpon>ModelGrammar.g4</DependentUpon>
     </Compile>
-    <Compile Include="PowerModel\PowerModel.cs" />
+    <Compile Include="NodeCanvas.xaml.cs">
+      <DependentUpon>NodeCanvas.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PowerGraph\GraphAirLine.cs" />
+    <Compile Include="PowerGraph\Bus.cs" />
+    <Compile Include="PowerGraph\GraphGenerator.cs" />
+    <Compile Include="PowerGraph\GraphElement.cs" />
+    <Compile Include="PowerGraph\GraphNode.cs" />
+    <Compile Include="PowerGraph\GraphLoad.cs" />
+    <Compile Include="PowerGraph\PowerGraphManager.cs" />
+    <Compile Include="PowerGraph\GraphTransformer2w.cs" />
     <Compile Include="Interpreter\ASTVisitor.cs" />
     <Compile Include="Interpreter\ObjectSystem.cs" />
     <Compile Include="Interpreter\Interpreter.cs" />
+    <Compile Include="Test\Test.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -103,6 +114,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="NodeCanvas.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MathUtils.cs" />
@@ -162,9 +177,7 @@
   <ItemGroup>
     <Resource Include="Docs\ModelLanguageDescription.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Test\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
