--- a/ElectricalPowerSystems/ElectricalPowerSystems.csproj
+++ b/ElectricalPowerSystems/ElectricalPowerSystems.csproj
@@ -82,6 +82,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ACGraph\ACGraph.cs" />
+    <Compile Include="ACGraph\CircuitModelAC.cs" />
+    <Compile Include="ACGraph\ElementsAC.cs" />
+    <Compile Include="DelegateCommand.cs" />
     <Compile Include="GUI\GraphViewer.xaml.cs">
       <DependentUpon>GraphViewer.xaml</DependentUpon>
     </Compile>
@@ -96,6 +99,7 @@
     <Compile Include="GUI\ToolboxControl.xaml.cs">
       <DependentUpon>ToolboxControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FileTabItem.cs" />
     <Compile Include="ModelGrammar.g4.lexer.cs">
       <DependentUpon>ModelGrammar.g4</DependentUpon>
     </Compile>
@@ -116,6 +120,8 @@
     <Compile Include="Interpreter\ASTVisitor.cs" />
     <Compile Include="Interpreter\ObjectSystem.cs" />
     <Compile Include="Interpreter\Interpreter.cs" />
+    <Compile Include="TabStyleSelector.cs" />
+    <Compile Include="TabTemplateSelector.cs" />
     <Compile Include="Test\Test.cs" />
     <Page Include="GUI\GraphViewer.xaml">
       <SubType>Designer</SubType>
@@ -146,9 +152,7 @@
     <Compile Include="MathUtils.cs" />
     <Compile Include="ModelException.cs" />
     <Compile Include="ModelGraph.cs" />
-    <Compile Include="ACGraph\ModelGraphAC.cs" />
     <Compile Include="ErrorMessage.cs" />
-    <Compile Include="ACGraph\ModelSolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -170,7 +174,7 @@
       <Generator>MSBuild:Compile</Generator>
       <CustomToolNamespace>ElectricalPowerSystems</CustomToolNamespace>
     </Antlr4>
-    <None Include="Docs\umlDiagram.mdj" />
+    <None Include="Docs\umlDiagramOld.mdj" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
@@ -200,7 +204,30 @@
   <ItemGroup>
     <Resource Include="Docs\ModelLanguageDescription.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Docs\RecloserModelingAlgorithm.txt" />
+    <Content Include="Resources\close-image.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Copy_6524_32.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Cut_6523_32.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\NewFile_6276_32.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Open_6529_32.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Paste_6520_32.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Redo_16x_32.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
